# tom-notifier

./: README.md  docker-compose.yml
shared/jwt_auth/: .gitignore  Cargo.toml
shared/jwt_auth/src/: error.rs  lib.rs  test.rs  util.rs
shared/jwt_auth/src/dto/: claims.rs  mod.rs
shared/jwt_auth/src/functions/: mod.rs  require_all_roles.rs
shared/jwt_auth/src/middleware/: jwt_auth_future.rs  jwt_auth_layer.rs  jwt_auth_service.rs  mod.rs
shared/protobuf/: confirmation.proto  (+5 more)
shared/rabbitmq_client/: .env  .gitignore  Cargo.toml
shared/rabbitmq_client/src/: lib.rs  retry.rs
shared/rabbitmq_client/src/connection/: connection_callback.rs  mod.rs  rabbitmq_connection.rs  state_machine.rs
shared/rabbitmq_client/src/connection/dto/: mod.rs  rabbitmq_connection_config.rs
shared/rabbitmq_client/src/consumer/: async_consumer.rs  channel_callback.rs  error.rs  mod.rs  rabbitmq_consumer.rs  state_machine.rs
shared/rabbitmq_client/src/consumer/callback/: mod.rs  rabbitmq_consumer_delivery_callback.rs  rabbitmq_consumer_status_change_callback.rs
shared/rabbitmq_client/src/consumer/dto/: delivery_response.rs  mod.rs
shared/rabbitmq_client/src/producer/: channel_callback.rs  mod.rs  rabbitmq_producer.rs  state_machine.rs
shared/rabbitmq_client/src/producer/dto/: mod.rs  publisher_confirm.rs  publisher_confirm_variant.rs
shared/rabbitmq_client/src/rabbitmq_connection/: mod.rs  rabbitmq_connection.rs  rabbitmq_connection_callback.rs  rabbitmq_connection_state_machine.rs
shared/rabbitmq_client/src/rabbitmq_consumer/: mod.rs  rabbitmq_consumer.rs  rabbitmq_consumer_channel_callback.rs  rabbitmq_consumer_state_machine.rs  rabbitmq_consumer_status_change_callback.rs
shared/rabbitmq_client/src/rabbitmq_consumer/dto/: rabbitmq_consumer_status.rs
shared/rabbitmq_client/src/rabbitmq_producer/: mod.rs  rabbitmq_producer.rs  rabbitmq_producer_channel_callback.rs  rabbitmq_producer_state_machine.rs
shared/rabbitmq_client/src/rabbitmq_producer/dto/: message.rs
shared/rabbitmq_client/tests/: tests_consumer.rs  tests_producer.rs
shared/rabbitmq_client/tests/common/: mod.rs
tom-notifier-core/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
tom-notifier-core/src/: error.rs  main.rs  routing.rs
tom-notifier-core/src/application/: application.rs  application_env.rs  application_middleware.rs  application_shutdown.rs  application_state.rs  application_tracing.rs  mod.rs
tom-notifier-core/src/auth/: jwt_authorization_validator.rs  mod.rs  role.rs
tom-notifier-core/src/auth/dto/: jwt_claims.rs  mod.rs  user.rs
tom-notifier-core/src/auth/middleware/: jwt_auth_layer.rs  jwt_auth_service.rs
tom-notifier-core/src/dto/: mod.rs
tom-notifier-core/src/dto/input/: mod.rs  notification.rs  notification_filters.rs  notification_invalidate_at.rs  notification_seen.rs  pagination.rs
tom-notifier-core/src/dto/output/: mod.rs  notification.rs  notification_id.rs
tom-notifier-core/src/repository/: error.rs  mod.rs  notifications_repository.rs  notifications_repository_impl.rs
tom-notifier-core/src/repository/dto/: inserted_notification.rs  mod.rs  notification.rs  notification_find_entity.rs
tom-notifier-core/src/repository/entity/: mod.rs  notification_insert_entity.rs
tom-notifier-core/src/service/: mod.rs
tom-notifier-core/src/service/confirmations_consumer_service/: confirmations_consumer_service.rs  mod.rs
tom-notifier-core/src/service/confirmations_consumer_service/dto/: confirmation.rs  confirmations_consumer_service_config.rs  mod.rs
tom-notifier-core/src/service/fanout_service/: fanout_service.rs  mod.rs  rabbitmq_fanout_service.rs
tom-notifier-core/src/service/fanout_service/dto/: mod.rs  rabbitmq_fanout_service_config.rs
tom-notifier-core/src/service/notifications_producer_service/: mod.rs  notifications_producer_service.rs  notifications_producer_service_impl.rs
tom-notifier-core/src/service/notifications_service/: mod.rs  notifications_service.rs  notifications_service_impl.rs
tom-notifier-core/tests/: README.md  max_http_content_len.rs  test_http.rs  test_max_http_content_len.rs  test_rabbitmq_confirmations_consumer.rs  test_rabbitmq_fanout_producer.rs  test_unauthorized.rs  unauthorized.rs
tom-notifier-core/tests/common/: mod.rs
tom-notifier-ws-delivery/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
tom-notifier-ws-delivery/src/: error.rs  main.rs  routing.rs
tom-notifier-ws-delivery/src/application/: application.rs  application_env.rs  application_middleware.rs  application_shutdown.rs  application_state.rs  application_tracing.rs  mod.rs
tom-notifier-ws-delivery/src/auth/: role.rs
tom-notifier-ws-delivery/src/dto/: mod.rs
tom-notifier-ws-delivery/src/dto/inoutput/: mod.rs  websocket_ticket.rs
tom-notifier-ws-delivery/src/dto/input/: mod.rs
tom-notifier-ws-delivery/src/dto/output/: mod.rs
tom-notifier-ws-delivery/src/repository/: mod.rs
tom-notifier-ws-delivery/src/repository/tickets_repository/: mod.rs  tickets_repository.rs  tickets_repository_impl.rs
tom-notifier-ws-delivery/src/service/: mod.rs
tom-notifier-ws-delivery/src/service/confirmations_service/: confirmations_service.rs  confirmations_service_impl.rs  mod.rs
tom-notifier-ws-delivery/src/service/notifications_consumer_service/: mod.rs  notifications_consumer_service.rs
tom-notifier-ws-delivery/src/service/notifications_deduplication_service/: mod.rs  notifications_deduplication_service.rs  notifications_deduplication_service_garbage_collector.rs  notifications_deduplication_service_impl.rs
tom-notifier-ws-delivery/src/service/tickets_service/: mod.rs  tickets_service.rs  tickets_service_impl.rs
tom-notifier-ws-delivery/src/service/websockets_service/: error.rs  mod.rs  websocket_confirmation_callback.rs  websocket_connection.rs  websockets_service.rs  websockets_service_impl.rs
tom-notifier-ws-delivery/tests/: test_confirmations.rs  test_core_integration.rs  test_deduplication.rs  test_network_error.rs  test_notification_delivered.rs  test_unauthorized.rs
tom-notifier-ws-delivery/tests/common/: mod.rs
(+22 files in other folders)
