[package]
name = "tom-notifier-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
bson = "2.11.0"
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
time = "0.3.36"
tokio = { version = "1.38.1", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.10.0"

[dev-dependencies]
mockall = "0.12.1"
