[package]
name = "tom-notifier-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
base64 = "0.22.1"
bson = { version = "2.11.0", features = ["time-0_3", "uuid-1"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
mongodb = "3.0.1"
serde = { version = "1.0.204", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.38.1", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.5.2", features = ["auth"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.10.0"

[dev-dependencies]
mockall = "0.12.1"
serde_json = "1.0.120"
tower = "0.4.13"
