[package]
name = "tom-notifier-ws-delivery"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros", "ws"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
jwt_auth = { version = "0.1.0", path = "../shared/jwt_auth" }
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = "0.12.5"
