[package]
name = "tom-notifier-ws-delivery"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = { version = "1.7.0", features = ["urispec"] }
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros", "ws"] }
bson = { version = "2.11.0", features = ["time-0_3", "uuid-1"] }
dotenvy = "0.15.7"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
jwt_auth = { version = "0.1.0", path = "../shared/jwt_auth" }
mockall = "0.13.0"
mongodb = "3.0.1"
prost = "0.13.1"
prost-types = "0.13.1"
rabbitmq_client = { version = "0.1.0", path = "../shared/rabbitmq_client" }
serde = { version = "1.0.208", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[dev-dependencies]
http = "1.1.0"
jwt_auth = { path = "../shared/jwt_auth", features = ["test_utils"] }
reqwest = "0.12.5"
tokio-tungstenite = "0.23.1"
tower = { version = "0.5.0", features = ["util"] }

[build-dependencies]
prost-build = "0.13.1"
