[package]
name = "jwt_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
jsonwebtoken = "9.3.0"
pin-project = "1.1.5"
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", default-features = false }
tower = "0.5.0"
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.5.0", features = ["util"] }
