[package]
name = "rabbitmq_client"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = "1.6.3"
anyhow = "1.0.86"
async-trait = "0.1.81"
tokio = { version = "1.39.2", default-features = false, features = ["sync"] }
tracing = "0.1.40"

[dev-dependencies]
amqprs = { version = "1.6.3", features = ["urispec"] }
dotenvy = "0.15.7"
serial_test = "3.1.1"
time = "0.3.36"
tracing-subscriber = "0.3.18"
